<package>
  <name>rqt_whycon_ros</name>
  <version>0.0.1</version>
  <description>rqt_whycon_ros</description>
  <maintainer email="a@a.com">A</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_image_view</url>
  <url type="repository">https://github.com/ros-visualization/rqt_image_view</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_image_view/issues</url>

  <author>A</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>whycon_ros</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>whycon_ros</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
