<package format="2">

  <name>rqt_whycon</name>
  <version>0.1.0</version>
  <description>
    A GUI plugin to control and view output of WhyCon package.
  </description>
  <maintainer email="jiri.ulrich@fel.cvut.cz">Jiri Ulrich</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/jiriUlr/rqt-whycon-ros</url>
  <url type="repository">https://github.com/jiriUlr/rqt-whycon-ros</url>
  <url type="bugtracker">https://github.com/jiriUlr/rqt-whycon-ros/issues</url>

  <author>Jiri Ulrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>whycon_ros</depend>

  <build_depend>qtbase5-dev</build_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
